# SpeakEase

./: README.md  main.py  pyproject.toml  requirement.txt  testing.ipynb
data/processed/: emotion_predictions.csv  final_inference_sample_call.csv  processed_features.csv  ravdess_metadata_local.csv  transcriptions.csv  transcriptions_detailed.json
final inference/: final_inference.py
fine_tuning_module/: fine_tune_emotion_classifier.py  fine_tuned_predictions.py
models/wav2vec2_emotion_finetuned/: config.json  tokenizer_config.json
src/: audio_processing.py  diagnosis.ipynb  save_data.py
trasncription/: transcription.py
